Remove deprecated newInstance usage